--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "devserver": "live-server --browser=\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\"",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
+    "prefix:css": "postcss css/style.comp.css --use autoprefixer -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "clean:css": "del-cli css/style.comp.css css/style.concat.css css/style.prefix.css",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css clean:css"
   },
   "author": "Jonas",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^8.4.1",
     "concat": "^1.0.3",
-    "node-sass": "^4.5.3",
-    "npm-run-all": "^4.1.1",
-    "postcss-cli": "^4.1.1"
-  }
+    "del-cli": "^1.1.0",
+    "node-sass": "^4.8.3",
+    "npm-run-all": "^4.1.2",
+    "postcss-cli": "^5.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 10 versions"
+  ]
 }
